--- a/Design - fischerda/HTML - view/base.css
+++ b/Design - fischerda/HTML - view/base.css
@@ -1,8 +1,23 @@
-#anchor {
-    width: 4%;
+body {
+    background-color: lightgray;
+    font-family: "Times New Roman", Georgia, Serif;
+
+}
+h1,h2,h3,h4,h5,h6 {
+    font-family: "Playfair Display";
+    letter-spacing: 5px;
+}
+.arrow {
+    text-align: center;
+    margin: auto;
+    padding: 100px;}
+.arrow img{
+    width: 15%;
+    margin: auto;
+    padding-top: 60px;
 }
 
-ul {
+.Ulnavigation {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -10,18 +25,109 @@ ul {
     background-color: #333;
 }
 
-li {
+.navigation li{
     float: left;
 }
 
-li a {
+.navigation {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding-left:16px;
+    padding-right:16px;
     text-decoration: none;
 }
+.navigation a{
+    padding-top: 14px;
+    padding-bottom: 14px;
+}
 
-li a:hover {
+.navigation :hover {
     background-color: #111;
 }
+
+.footer {
+    background-color: #333;
+    height: 250px;
+    color: white;
+}
+.footer footer{
+
+    /*display: inline-block;*/
+}
+.footer div{
+    width: 33%;
+    height: 100%;
+    display: block;
+    padding: 0;
+    float: left;
+}
+.MoulinSA li a{
+    text-align: left;
+}
+
+.MoulinSA li :hover{
+    background-color: #333333;
+    color: white;
+
+}
+
+.MoulinSA ul{
+    list-style-type: none;
+
+
+}
+.MoulinSA a{
+    text-decoration: none;
+}
+#right{
+    text-align: right;
+    padding-right: 10px ;
+}
+#left li{
+    text-align: left;
+    vertical-align: middle;
+    padding-top: 30px;
+    font-size: 20px;
+}
+
+.DashTitle {
+    border-width: 1px ;
+    border-style: groove;
+    border-color: #111111;
+    padding-left: 10px;
+    background-color: #b3b3b3;
+}
+
+
+.Dashboard {
+    border-width: 1px ;
+    border-style: groove;
+    border-color: #111111;
+}
+.dashPet{
+    border-width: 1px ;
+    border-style: groove;
+    border-color: #111111;
+    height: 300px;
+}
+.petInfo div{
+    display: block;
+    width: 50%;
+}
+.petInfo img{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.petInfo {
+    display: inline-block;
+    padding: auto;
+}
+/**
+<hr>
+
+ <!-- About Section -->
+
+
+
+*/
